[tool.poetry]
name = "tpapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fast_tpi"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
pymongo = "^4.3.3"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
beanie = "^1.16.8"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
mypy = "^0.991"
pre-commit = "^2.21.0"

[tool.isort]
profile = "black"
force_single_line = "false"
atomic = "true"
lines_after_imports = "2"
lines_between_types = "1"
line_length = "88"
known_third_party = ["pytest", "sqlmodel", "fastapi", "httpx"]
multi_line_output = "3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
